k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-server-deployment
  namespace: default
  labels:
    app: python-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-server
  template:
    metadata:
      labels:
        app: python-server
    spec:
      serviceAccountName: node-reader-sa  # <-- ADD THIS LINE
      containers:
      - name: app-container
        image: REGISTRY_DOMAIN_PLACEHOLDER/python-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: python-server-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30000
  selector:
    app: python-server
